main.tf
# first vpc
resource "aws_vpc" "primary_vpc" {
  cidr_block       =  var.primary_vpc_cidr
  provider = aws.primary
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    Name = "Priamry-VPC-${var.primary}"
  }
}

# second vpc
resource "aws_vpc" "secodary_vpc" {
  cidr_block       = var.secodary_vpc_cidr
  provider = aws.secondary
  enable_dns_hostnames = true
  enable_dns_support = true

  tags = {
    Name = "Secodary-VPC-${var.secondary}"
  }
}

# subnet for the primary subnet
resource "aws_subnet" "primary_subnet" {
    provider = aws.primary
    vpc_id = aws_vpc.primary_vpc.id
    cidr_block = var.primary_vpc_cidr
    availability_zone = data.aws_availibility_zones.primary.names[0]
    map_public_ip_on_launch = true

    tags = {
      Name = "Primary-Subnet-${var.primary}"
      Environment = "Demo"
    }
}

# subnet for the secondary
resource "aws_subnet" "secondary_subnet" {
    provider = aws.secondary
    vpc_id = aws_vpc.secodary_vpc.id
    cidr_block = var.secodary_vpc_cidr
    availability_zone = data.aws_availability_zones.secondary.names[0]
    map_public_ip_on_launch = true

    tags = {
        Name = "Secondary-Subnet-${var.secondary}"
        Environment =  "Demo"
    }
}

# internet gatway of the primary vpc/subnet
resource "aws_internet_gateway" "primary_igw" {
    provider = aws.primary
    vpc_id = aws_vpc.primary_vpc.id

    tags = {
      Name = "Primary-IGW-${var.primary}"
      Environment = "Demo"
    } 
}

# internet gatway  of the secondary vpc/subnet
resource "aws_internet_gateway" "secondary_igw" { 
    provider = aws.secondary
    vpc_id = aws_vpc.secodary_vpc.id

     tags = {
      Name = "Secondary-IGW-${var.primary}"
      Environment = "Demo"
    }
}

# primary route table
resource "aws_route_table" "primary_rt" {
    provider = aws.primary
    vpc_id = aws_vpc.primary_vpc.id

    route  {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.primary_igw.id
    }

    tags = {
      Name = "Primary-route-table"
      Environment = "Demo"
    }
  
}

# secondary route table
resource "aws_route_table" "secondary_rt" {
    provider = aws.secondary
    vpc_id = aws_vpc.secodary_vpc

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.secondary_igw.id
    }

    tags = {
      Name = "Secondary-route-table"
      Environment = "Demo"
    }
}

# route table association for primary vpc/subnet
resource "aws_route_table_association" "primary_rta" {
  provider = aws.primary
  subnet_id = aws_subnet.primary_subnet.id
  route_table_id = aws_route_table.primary_rt.id
}

# route table assiciation for the secondary vpc/subnet
resource "aws_route_table_association" "secondary_rta" {
    provider = aws.secondary
    subnet_id = aws_subnet.secondary_subnet.id
    route_table_id = aws_route_table.secondary_rt.id
}

# vpc peering from primary to secondary
resource "aws_vpc_peering_connection" "primary_to_secondary" {
    provider = aws.primary
    vpc_id = aws_vpc.primary_vpc.id
    peer_vpc_id = aws_vpc.secodary_vpc.id
    peer_region = var.secondary
    auto_accept = false 

    tags = {
        Name = "Primary-to-Secondary-peering"
        Environment = "Demo"
        Side = "Requester"
    }
}

# vpc peering from secondary to primary
resource "aws_vpc_peering_connection_accepter" "secondary_accepter" {
    provider = aws.secondary
    vpc_peering_connection_id = aws_vpc_peering_connection.primary_to_secondary.id
    auto_accept = true

    tags = {
      Name = "Secondary-peering-accepter"
      Environment = "Demo"
      Side = "Accepter"
    }
}

# add the route in the priamry rt
resource "aws_route" "primary_to_secondary" {
    provider = aws.primary
    route_table_id = aws_route_table.primary_rt.id
    destination_cidr_block = var.secodary_vpc_cidr
    vpc_peering_connection_id = aws_vpc_peering_connection.primary_to_secondary.id

    depends_on = [ aws_vpc_peering_connection_accepter.secondary_accepter ]
}

# aws route from secondary to primary
resource "aws_route" "secondary_primary" {
   provider = aws.secondary
   route_table_id = aws_route_table.secondary_rt.id
   destination_cidr_block = var.primary_vpc_cidr
   vpc_peering_connection_id = aws_vpc_peering_connection.primary_to_secondary.id

   depends_on = [ aws_vpc_peering_connection_accepter.secondary_accepter ]
}

# security group for the primary vpc EC2 instance
resource "aws_security_group" "primary_sg" {
   provider = aws.primary
   name = "primary-vpc-sg"
   description = "Security  group for the  primary VPC instance"
   vpc_id = aws_vpc.primary_vpc.id

   ingress {
    description = "SSH from anywhere"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
   }

   ingress {
    description = "ICMP from secondary vpc"
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = [var.secodary_vpc_cidr]
   }

   ingress {
    description = "All traffic from Secondary VPC"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = [var.secodary_vpc_cidr]
   }

   egress {
    description = "Allow all outbound traffic"
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
   }

   tags = {
    Name = "Primary-VPC-SG"
    Environment = "Demo"
   }
}

# security group for the secondary vpc instance
resource "aws_security_group" "secondary-sg" {
    provider = aws.secondary
    name = "secondary-vpc-sg"
    description = "Security group for the secondary vpc instance"
    vpc_id = aws_vpc.secodary_vpc.id

      ingress {
    description = "SSH from anywhere"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ICMP from Primary VPC"
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = [var.primary_vpc_cidr]
  }

  ingress {
    description = "All traffic from Primary VPC"
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = [var.primary_vpc_cidr]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "Secondary-VPC-SG"
    Environment = "Demo"
  }
  
}

# EC2 instance in primary vpc
resource "aws_instance" "primary_instance" {

    provider = aws.primary
    ami = data.aws_ami.primary_ami.id
    instance_type = var.instance_type
    subnet_id = aws_subnet.primary_subnet.id
    vpc_security_group_ids = [aws_security_group.primary_sg.id]
    key_name = var.primary_key_name

    user_data = local.primary_user_data

    tags = {
      Name = "Primary-VPC-Instance"
      Environment = "Demo"
      Region = var.primary
    }

    depends_on = [ aws_vpc_peering_connection_accepter.secondary_accepter ]
  
}

# EC2 Instance in Secondary VPC
resource "aws_instance" "secondary_instance" {
  provider               = aws.secondary
  ami                    = data.aws_ami.secondary_ami.id
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.secondary_subnet.id
  vpc_security_group_ids = [aws_security_group.secondary-sg.id]
  key_name               = var.secondary_key_name

  user_data = local.secondary_user_data

  tags = {
    Name        = "Secondary-VPC-Instance"
    Environment = "Demo"
    Region      = var.secondary
  }

  depends_on = [aws_vpc_peering_connection_accepter.secondary_accepter]
}
